Fixed case when lookup for unauthorized player will throw exception